--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,11 @@
          <app-parent></app-parent>
       </div>
     </div>
+    <div class="row">
+      <div style="height: 500px;" class="col-12 bg-secondary">
+
+      </div>
+    </div>
   </div>
 </body>
 </html>
